--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -109,7 +109,7 @@ header .user .name{
 
 header .user .post{
     font-size: 2rem;
-    color:#eee;
+    color:var(--yellow);
 }
 
 header .navbar{
@@ -147,7 +147,6 @@ header .navbar ul li a:hover{
     z-index: 1000;
     display: none;
 }
-
 .home{
     display: flex;
     justify-content: center;
@@ -174,7 +173,59 @@ header .navbar ul li a:hover{
     color:#eee;
     padding: 1rem 0;
 }
+.text-3{
+    font-size: 40px;
+    margin: 5px 0;
+    color: #fff;
+}
+.text-3 span{
+    color:var(--yellow) ;
+    font-weight: 500;
+}
 
+/* about section styling */
+.about .title::after{
+    content: "who i am";
+}
+.about .about-content .left{
+    width: 45%;
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.about .about-content .right{
+    width: 55%;
+}
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+    color: crimson;
+}
+.about .about-content .right p{
+    text-align: justify;
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    color: crimson;
+    background: none;
+}
 .about .row{
     display: flex;
     align-items: center;
@@ -224,6 +275,108 @@ header .navbar ul li a:hover{
 .about .row .counter .box h3{
     font-size: 2rem;
     color:#fff;
+}
+.skill {
+    margin-top: 35px;
+    margin-bottom: 35px;
+    margin-left: 50px;
+    position: relative;
+    overflow-x:hidden;
+    color:#fff;
+    width: 50%;
+    
+  
+}
+.skill  p {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0;
+}
+.skill:before{
+    width: 100%;
+    height: 8px;
+    content: "";
+    display: block;
+    position: absolute;
+    background: #FFF;
+    bottom: 0;
+}
+.skill-bar {
+    width: 100%;
+    height: 5px;
+    background:var(--yellow);
+    display:block;
+    position: relative;
+}
+
+/* SKILL 1 */
+.skill1{
+    width: 95%;
+    height: 8px;
+  
+}
+.skill-bar span{
+    position:absolute;
+    top: -30px;
+    padding: 0;
+    font-size: 18px;
+    padding: 3px 0;
+    font-weight: 500;
+}
+.skill-bar {
+    position: relative;
+  
+}
+
+.skill1 .skill-count1 {
+    right:0;
+}
+/* SKILL 2 */
+.skill2{
+    width: 85%;
+    height: 8px;
+}
+
+.skill2 .skill-count2 {
+    right: 0;
+}
+/* SKILL 3 */
+.skill3{
+    width: 75%;
+    height: 8px;
+}
+.skill3 .skill-count3 {
+    right: 0;
+}
+
+/* SKILL 4 */
+.skill4{
+    width: 90%;
+    height: 8px;
+}
+
+.skill4 .skill-count4 {
+    right: 0;
+}
+
+/* SKILL 5 */
+.skill5{
+    width: 45%;
+    height:8px;
+}
+
+.skill5 .skill-count5 {
+    right: 0;
+}
+
+/* SKILL 6 */
+.skill6{
+    width: 60%;
+    height:8px;
+}
+
+.skill6 .skill-count6 {
+    right: 0;
 }
 
 .education .box-container{
@@ -303,6 +456,7 @@ header .navbar ul li a:hover{
     transform: scale(1.2);
 }
 
+
 .contact .row{
     display: flex;
     align-items: center;
@@ -334,7 +488,7 @@ header .navbar ul li a:hover{
 }
 
 .contact .row form .box::placeholder{
-    text-transform: capitalize;
+    text-transform:uppercase;
 }
 
 .contact .row form .message{
